--- a/starter-code/src/app/food-list/food-list.component.html
+++ b/starter-code/src/app/food-list/food-list.component.html
@@ -1,3 +1,70 @@
-<p>
-  food-list works!
-</p>
+<div class="container container-fluid">
+
+<div class="">
+  <div class="form-group">
+    <label for="food-search">Search</label>
+    <input class="form-group" id="food-search" type="text" [(ngModel)]="pattern">
+  </div>
+
+  <div class="new-food">
+    <button (click)="addFood()" class="new-food-button btn btn-danger">Add New Food</button>
+    <br>
+    <div *ngIf="isEditing">
+      <div>
+        <label for="new-food-name">Name</label>
+        <input class="form-group" type="text" [(ngModel)]="newFoodName">
+      </div>
+      <div>
+        <label for="new-food-calories">Calories</label>
+        <input class="form-group" type="text" [(ngModel)]="newFoodCalories">
+      </div>
+      <div>
+        <label for="new-food-name">Image</label>
+        <input class="form-group" type="text" [(ngModel)]="newFoodImage">
+      </div>
+
+      <button class="btn" (click)="newFood()">Add Food</button>
+    </div>
+  </div>
+
+  <br>
+  <br>
+  <ul class="list-group">
+    <li class="col-sm-7 list-group-item" *ngIf="isEditing">
+      <img class='img-responsive' [src]="newFoodImage">
+      <h3 class="food-name">
+        {{ newFoodName }}
+        <small class="food-calories">{{ newFoodCalories }}</small>
+      </h3>
+    </li>
+    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+    <div class="container" *ngFor="let food of foods | foodSearch:'name':pattern;">
+    <li class="list-group-item" >
+      <!-- <li class="single-food" *ngFor="let food of foods"> -->
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+      <img class="img-responsive image" [src]="food.image">
+      <!--   could do this either way below evaluates once, above listens for changes-->
+      <!-- <img src="{{food.image}}"> -->
+      <h3 class="food-name">
+        {{ food.name }}
+        <small class="food-calories">{{ food.calories }}</small>
+      </h3>
+      <button (click)="addToMyList(food, quantity)">+</button>
+      <input type="text" #quantity value="1">
+    </li>
+  </div>
+  </ul>
+
+</div>
+</div>
+
+<div class="my-food-list">
+  <h2>Today's Foods <small>{{ totalCalories }} cal</small></h2>
+  <ul>
+    <li *ngFor="let food of myList">
+      <span>{{ food.name }}</span>
+      <span>{{ food.calories }}</span>
+      <span *ngIf="food.quantity > 1">x{{ food.quantity }}</span>
+    </li>
+  </ul>
+</div>
