--- a/starter-code/src/app/app.component.html
+++ b/starter-code/src/app/app.component.html
@@ -1,4 +1,7 @@
-<h1>
-  {{title}}
-</h1>
-<app-food-list></app-food-list>
+<link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css">
+
+<div class="container">
+  <div class="food-container">
+    <app-food-list></app-food-list>
+  </div>
+</div>
