--- a/starter-code/src/app/food-list/food-list.component.html
+++ b/starter-code/src/app/food-list/food-list.component.html
@@ -1,6 +1,45 @@
 <div class="container container-fluid">
 
-<div class="">
+   <!-- [hidden]="submitted" 
+
+    <div>
+      <form (ngSubmit)="onSubmit(commentForm.value)" #commentForm="ngForm" class="lightBlue">
+        <div class="form-group">
+          <input type="text" class="form-control" id="name" required
+          [(ngModel)]="model.name" name="name"
+          #name="ngModel">
+          <div [hidden]="name.valid || name.pristine"
+          class="alert alert-danger">
+          Name is required
+        </div>
+      </div>
+
+      <div class="form-group">
+        <input type="text" class="form-control" id="comment" required
+        [(ngModel)]="model.comment" name="comment">
+      </div>
+      <button type="submit" class="btn btn-success" [disabled]="!commentForm.form.valid">Submit</button>
+      <button type="button" class="btn btn-default" (click)="newComment(); commentForm.reset()">New Comment</button>
+    </form>
+  </div>
+
+  <div [hidden]="!submitted">
+    <h4>You submitted the following:</h4>
+    <div class="row">
+      <div class="col-xs-1">Name:</div>
+      <div class="col-xs-9  pull-left">{{ model.name }}</div>
+    </div>
+    <div class="row">
+      <div class="col-xs-1">Comment:</div>
+      <div class="col-xs-9 pull-left">{{ model.comment }}</div>
+    </div>
+    <br>
+    <button class="btn btn-primary" (click)="submitted=false">Edit</button>
+  </div>
+  </div> -->
+
+
+ <div class="">
   <div class="form-group">
     <label for="food-search">Search</label>
     <input class="form-group" id="food-search" type="text" [(ngModel)]="pattern">
@@ -25,7 +64,7 @@
 
       <button class="btn" (click)="newFood()">Add Food</button>
     </div>
-  </div>
+  </div> 
 
   <br>
   <br>
